--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,11 +1,8 @@
-<%= form_for(task) do |f| %>
-  <%= f.label :title %>
-  <%= f.text_field :title %>
-  <%= f.label :details %>
-  <%= f.text_field :details %>
+<%= simple_form_for(task) do |f| %>
+  <%= f.input :title %>
+  <%= f.input :details %>
   <% if task.id %>
-    <%= f.label :completed %>
-    <%= f.check_box :completed %>
+    <%= f.input :completed %>
   <% end %>
   <%= f.submit %>
 <% end %>
